--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -1,5 +1,15 @@
-FROM tezos/tezos:master
-RUN sudo apk add curl lz4 xz jq
-COPY cron.sh /
-ENTRYPOINT ["/cron.sh"]
-CMD []
+FROM golang:1.17-alpine
+
+WORKDIR /app
+
+COPY go.mod ./
+COPY go.sum ./
+RUN go mod download
+
+COPY *.go ./
+
+RUN go build -o /cron
+
+EXPOSE 8080
+
+CMD [ "/cron" ]
