--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -2,14 +2,6 @@ FROM golang:1.17-alpine
 
 WORKDIR /app
 
-COPY go.mod ./
-COPY go.sum ./
-RUN go mod download
+RUN go build ./main.go
 
-COPY *.go ./
-
-RUN go build -o /cron
-
-EXPOSE 8080
-
-CMD [ "/cron" ]
+CMD [ "/main" ]
