--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -2,8 +2,10 @@ FROM golang:1.17-alpine
 
 WORKDIR /app
 
-COPY *.go ./
+COPY go.mod ./
+RUN go mod download
 
-RUN go build ./main.go
+COPY *.go ./
+RUN go build -o /main
 
 CMD [ "/main" ]
